[build-system]
requires = ["setuptools", "wheel", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smartpi-gpio"
version = "1.0.0"
description = "A GPIO library for Smart Pi"
authors = ["ADNroboticsfr <adnroboticsfr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.0"
Pillow = "^8.0.0"
smbus2 = "^0.4.3"
luma-core = "^1.0.0"
luma-oled = "^1.0.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
# Fusion des commandes sous une seule section [tool.poetry.scripts]
gpio = "gpio.scripts:main"
install = "install:main"  

[tool.poetry.extras]
enable_features = ["activate_interfaces.sh"]

[tool.poetry.include]
# Assurez-vous que le fichier activate_interfaces.sh est bien inclus
include = ["bin/activate_interfaces.sh"]
